welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: '<-' expected but ')' found.
for (0 to 3){
           ^Source:27: error: illegal start of simple expression
	}
        ^