welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
baisseBrosse()
for (0 to 3){
  avance()
}
gauche()
for (0 to 3){
  avance()
}
gauche()
for (0 to 3){
  avance()
}
gauche()
for (0 to 1){
  avance()
}
gauche()
avance()
leveBrosse()
droite()
avance()
droite()
avance()
gauche()
avance()